fix: Overlay on mobile

--- a/frappe/public/js/frappe/ui/toolbar/components/sidebar.scss
+++ b/frappe/public/js/frappe/ui/toolbar/components/sidebar.scss
@@ -212,7 +212,7 @@ $dropDownBg: #e3e3e3;
 
 .vsm-list-overlay {
 	position: fixed;
-	width: 100%;
+	width: 290px;
 	height: 100%;
 	z-index: 998;
 }
